# email_agent

./: .gitignore  README.md  agent.py  claude.md  email_finder.py  llm_unsubscribe_agent.py  main.py  project_plan.md  pyproject.toml  requirements.txt  shared_auth.py  temp.txt  unsubscribe_agent.py  unsubscribe_llm_agent.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/static/css/: styles.css
frontend/static/js/: app.ts  types.ts
frontend/static/js/api/: EmailApiManager.ts
frontend/static/js/components/: email_renderer.ts
frontend/static/js/managers/: AnimationManager.ts  ScanManager.ts  TabManager.ts
frontend/templates/: index.html
scripts/: setup_database.sh
src/: api.py  auth.py  email_finder.py  llm_unsubscribe_agent.py  main.py  openai_agent.py  shared_auth.py  unsubscribe_agent.py
tests/: email_search_tests.py  llm_finds_link_tests.py
